<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ui.MainFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleCentered="true"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/main_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_tv1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_app_bar_layout" />

        <TextView
            android:id="@+id/main_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tv2"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/main_tv1"
            app:layout_constraintTop_toBottomOf="@+id/main_tv1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/main_sign_up_tv"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/main_tv2"
            app:layout_constraintTop_toBottomOf="@+id/main_tv2"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"
            android:text="@string/main_login_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/main_sign_up_btn"
            app:layout_constraintTop_toBottomOf="@+id/main_sign_up_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>